<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Testea</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nome_usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="signin">SignIn</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="meus_lutadores">Meus Lutadores</string>
    <string name="lutadores">Lutadores</string>
    <string name="treinos">Treinos</string>
    <string name="lutas">Lutas</string>
    <string name="usuario">Usuario</string>
    <string name="confsenha">Confirmação de Senha</string>
    <string name="email">Email</string>
    <string name="cep">CEP</string>
    <string name="cadastrese">Cadastra-Se</string>
    <string name="academia">Academia</string>
    <string name="title_activity_criar_academia">CriarAcademia</string>
    <string name="title_activity_criar_lutador">CriarLutador</string>
    <string name="Criar">Criar</string>
    <string name="Nome">Nome</string>
    <string name="Descricao">Descricao</string>
    <string name="NomeDaAcademia">Nome</string>
    <string name="NomeCompletoLutador">Nome completo do Lutador</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_luta">Luta</string>
    <string name="title_activity_lutador">Lutador</string>
    <string name="treinarlutador">Treinar Lutador</string>
    <string name="reminder">reminder</string>
    <string name="boxe">boxe</string>
    <string name="joelho">joelho</string>
    <string name="chute">chute</string>
    <string name="cotovelo">cotovelo</string>
    <string name="clinch">clinch</string>
    <string name="resistencia">resistencia</string>
    <string name="explocao">explocao</string>
    <string name="velocidade">velocidade</string>
    <string name="estadofisico">estado fisico</string>
    <string name="zero">0</string>
    <string name="nome">Nome</string>
    <string name="title_activity_resultado">Resultado</string>
    <string name="title_activity_treino">Treino</string>

</resources>
