<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.examplet.teste.MainActivity" >

        <item
        android:id="@+id/academia"
        android:orderInCategory="100"
        android:title="@string/academia"
        android:onClick="menuAcademia"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/meus_dados"
        android:orderInCategory="100"
        android:title="@string/meus_dados"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/meus_lutadores"
        android:orderInCategory="100"
        android:title="@string/meus_lutadores"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/lutadores"
        android:orderInCategory="100"
        android:title="@string/lutadores"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/treinos"
        android:orderInCategory="100"
        android:title="@string/treinos"
        app:showAsAction="never"/>
    
     <item
        android:id="@+id/lutas"
        android:orderInCategory="100"
        android:title="@string/lutas"
        app:showAsAction="never"/>

</menu>
