<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.examplet.teste.SignIn" >

    <EditText android:id="@+id/txtUsuario"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/usuario" />
    
     <EditText android:id="@+id/txtSenha"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/senha" />
     
     <EditText android:id="@+id/txtConfSenha"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/confsenha" />
     
     <EditText android:id="@+id/txtEmail"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/email" />
     
     <EditText android:id="@+id/txtCep"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/cep" />
     
    <Button android:id="@+id/btnCadastrase"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
        android:gravity="center"
        android:onClick="btnCadastrar"
        android:hint="@string/cadastrese" /> 

</LinearLayout>
