<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.examplet.teste.CriarAcademia" >

    <EditText
        android:id="@+id/txtNomeAcademia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/NomeDaAcademia"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:onClick="btnCriarAcademia"
        android:text="@string/Criar" />

    <EditText
        android:id="@+id/txtDescricaoAcademia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNomeAcademia"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/Descricao" 
        android:inputType="textPostalAddress" >
    </EditText>

</RelativeLayout>